--- a/app/globals.css
+++ b/app/globals.css
@@ -1,12 +1,13 @@
 @import "tailwindcss";
+@import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+  --font-sans: Dongle, ui-sans-serif, sans-serif, system-ui;
+  --font-mono: Ubuntu Mono, ui-monospace, monospace;
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -43,75 +44,142 @@
   --radius-2xl: calc(var(--radius) + 8px);
   --radius-3xl: calc(var(--radius) + 12px);
   --radius-4xl: calc(var(--radius) + 16px);
+  --font-serif: Lateef, ui-serif, serif;
+  --radius: 1.5rem;
+  --tracking-tighter: calc(var(--tracking-normal) - 0.05em);
+  --tracking-tight: calc(var(--tracking-normal) - 0.025em);
+  --tracking-wide: calc(var(--tracking-normal) + 0.025em);
+  --tracking-wider: calc(var(--tracking-normal) + 0.05em);
+  --tracking-widest: calc(var(--tracking-normal) + 0.1em);
+  --tracking-normal: var(--tracking-normal);
+  --shadow-2xl: var(--shadow-2xl);
+  --shadow-xl: var(--shadow-xl);
+  --shadow-lg: var(--shadow-lg);
+  --shadow-md: var(--shadow-md);
+  --shadow: var(--shadow);
+  --shadow-sm: var(--shadow-sm);
+  --shadow-xs: var(--shadow-xs);
+  --shadow-2xs: var(--shadow-2xs);
+  --spacing: var(--spacing);
+  --letter-spacing: var(--letter-spacing);
+  --shadow-offset-y: var(--shadow-offset-y);
+  --shadow-offset-x: var(--shadow-offset-x);
+  --shadow-spread: var(--shadow-spread);
+  --shadow-blur: var(--shadow-blur);
+  --shadow-opacity: var(--shadow-opacity);
+  --color-shadow-color: var(--shadow-color);
+  --color-destructive-foreground: var(--destructive-foreground);
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.13 0.028 261.692);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.13 0.028 261.692);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.13 0.028 261.692);
-  --primary: oklch(0.21 0.034 264.665);
-  --primary-foreground: oklch(0.985 0.002 247.839);
-  --secondary: oklch(0.967 0.003 264.542);
-  --secondary-foreground: oklch(0.21 0.034 264.665);
-  --muted: oklch(0.967 0.003 264.542);
-  --muted-foreground: oklch(0.551 0.027 264.364);
-  --accent: oklch(0.967 0.003 264.542);
-  --accent-foreground: oklch(0.21 0.034 264.665);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.928 0.006 264.531);
-  --input: oklch(0.928 0.006 264.531);
-  --ring: oklch(0.707 0.022 261.325);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0.002 247.839);
-  --sidebar-foreground: oklch(0.13 0.028 261.692);
-  --sidebar-primary: oklch(0.21 0.034 264.665);
-  --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
-  --sidebar-accent: oklch(0.967 0.003 264.542);
-  --sidebar-accent-foreground: oklch(0.21 0.034 264.665);
-  --sidebar-border: oklch(0.928 0.006 264.531);
-  --sidebar-ring: oklch(0.707 0.022 261.325);
+  --radius: 1.5rem;
+  --card: oklch(1.0000 0 0);
+  --card-foreground: oklch(0.3704 0.0317 263.0184);
+  --popover: oklch(1.0000 0 0);
+  --popover-foreground: oklch(0.3704 0.0317 263.0184);
+  --primary: oklch(0.7125 0.1595 295.3421);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.9082 0.0533 307.2394);
+  --secondary-foreground: oklch(0.4437 0.0273 260.6449);
+  --muted: oklch(0.9472 0.0331 308.9666);
+  --muted-foreground: oklch(0.5488 0.0244 268.2356);
+  --accent: oklch(0.9384 0.0266 323.9104);
+  --accent-foreground: oklch(0.3704 0.0317 263.0184);
+  --destructive: oklch(0.8128 0.0999 21.7381);
+  --border: oklch(0.9082 0.0533 307.2394);
+  --input: oklch(0.9082 0.0533 307.2394);
+  --ring: oklch(0.7125 0.1595 295.3421);
+  --chart-1: oklch(0.7125 0.1595 295.3421);
+  --chart-2: oklch(0.6104 0.2192 294.5557);
+  --chart-3: oklch(0.5476 0.2469 295.1580);
+  --chart-4: oklch(0.4971 0.2415 294.8898);
+  --chart-5: oklch(0.4376 0.2108 295.0283);
+  --sidebar: oklch(0.9082 0.0533 307.2394);
+  --sidebar-foreground: oklch(0.3704 0.0317 263.0184);
+  --sidebar-primary: oklch(0.7125 0.1595 295.3421);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.9384 0.0266 323.9104);
+  --sidebar-accent-foreground: oklch(0.3704 0.0317 263.0184);
+  --sidebar-border: oklch(0.9082 0.0533 307.2394);
+  --sidebar-ring: oklch(0.7125 0.1595 295.3421);
+  --background: oklch(0.9689 0.0090 314.7819);
+  --foreground: oklch(0.3704 0.0317 263.0184);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --font-sans: Dongle, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: Lateef, ui-serif, serif;
+  --font-mono: Ubuntu Mono, ui-monospace, monospace;
+  --shadow-color: #1a1a1a;
+  --shadow-opacity: 0.35;
+  --shadow-blur: 50px;
+  --shadow-spread: 5.5px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 8px;
+  --letter-spacing: 0em;
+  --spacing: 0.25rem;
+  --shadow-2xs: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.17);
+  --shadow-xs: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.17);
+  --shadow-sm: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.35), 0px 1px 2px 4.5px hsl(0 0% 10.1961% / 0.35);
+  --shadow: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.35), 0px 1px 2px 4.5px hsl(0 0% 10.1961% / 0.35);
+  --shadow-md: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.35), 0px 2px 4px 4.5px hsl(0 0% 10.1961% / 0.35);
+  --shadow-lg: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.35), 0px 4px 6px 4.5px hsl(0 0% 10.1961% / 0.35);
+  --shadow-xl: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.35), 0px 8px 10px 4.5px hsl(0 0% 10.1961% / 0.35);
+  --shadow-2xl: 0px 8px 50px 5.5px hsl(0 0% 10.1961% / 0.88);
+  --tracking-normal: 0em;
 }
 
 .dark {
-  --background: oklch(0.13 0.028 261.692);
-  --foreground: oklch(0.985 0.002 247.839);
-  --card: oklch(0.21 0.034 264.665);
-  --card-foreground: oklch(0.985 0.002 247.839);
-  --popover: oklch(0.21 0.034 264.665);
-  --popover-foreground: oklch(0.985 0.002 247.839);
-  --primary: oklch(0.928 0.006 264.531);
-  --primary-foreground: oklch(0.21 0.034 264.665);
-  --secondary: oklch(0.278 0.033 256.848);
-  --secondary-foreground: oklch(0.985 0.002 247.839);
-  --muted: oklch(0.278 0.033 256.848);
-  --muted-foreground: oklch(0.707 0.022 261.325);
-  --accent: oklch(0.278 0.033 256.848);
-  --accent-foreground: oklch(0.985 0.002 247.839);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.551 0.027 264.364);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.21 0.034 264.665);
-  --sidebar-foreground: oklch(0.985 0.002 247.839);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0.002 247.839);
-  --sidebar-accent: oklch(0.278 0.033 256.848);
-  --sidebar-accent-foreground: oklch(0.985 0.002 247.839);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.551 0.027 264.364);
+  --background: oklch(0.2161 0.0061 56.0434);
+  --foreground: oklch(0.9280 0.0345 274.9790);
+  --card: oklch(0.2817 0.0313 309.9354);
+  --card-foreground: oklch(0.9280 0.0345 274.9790);
+  --popover: oklch(0.2817 0.0313 309.9354);
+  --popover-foreground: oklch(0.9280 0.0345 274.9790);
+  --primary: oklch(0.7135 0.1691 295.8917);
+  --primary-foreground: oklch(0.2876 0.1415 293.5534);
+  --secondary: oklch(0.4450 0.2190 306.0620);
+  --secondary-foreground: oklch(0.8717 0.0093 258.3382);
+  --muted: oklch(0.2295 0.0379 305.3566);
+  --muted-foreground: oklch(0.7115 0.0201 265.9306);
+  --accent: oklch(0.6347 0.2524 306.3638);
+  --accent-foreground: oklch(0.9691 0.0161 293.7558);
+  --destructive: oklch(0.8128 0.0999 21.7381);
+  --border: oklch(0.3427 0.0449 310.6572);
+  --input: oklch(0.3427 0.0449 310.6572);
+  --ring: oklch(0.8198 0.1014 295.5529);
+  --chart-1: oklch(0.7900 0.1183 297.4724);
+  --chart-2: oklch(0.7125 0.1595 295.3421);
+  --chart-3: oklch(0.6104 0.2192 294.5557);
+  --chart-4: oklch(0.5476 0.2469 295.1580);
+  --chart-5: oklch(0.4971 0.2415 294.8898);
+  --sidebar: oklch(0.3427 0.0449 310.6572);
+  --sidebar-foreground: oklch(0.9280 0.0345 274.9790);
+  --sidebar-primary: oklch(0.7900 0.1183 297.4724);
+  --sidebar-primary-foreground: oklch(0.2161 0.0061 56.0434);
+  --sidebar-accent: oklch(0.3869 0.0512 306.1961);
+  --sidebar-accent-foreground: oklch(0.8717 0.0093 258.3382);
+  --sidebar-border: oklch(0.3860 0.1892 296.2670);
+  --sidebar-ring: oklch(0.7900 0.1183 297.4724);
+  --destructive-foreground: oklch(0.2161 0.0061 56.0434);
+  --radius: 1.5rem;
+  --font-sans: Dongle, ui-sans-serif, sans-serif, system-ui;
+  --font-serif: Lateef, ui-serif, serif;
+  --font-mono: Ubuntu Mono, ui-monospace, monospace;
+  --shadow-color: oklch(0.216 0.006 56.043);
+  --shadow-opacity: 0.35;
+  --shadow-blur: 50px;
+  --shadow-spread: 5.5px;
+  --shadow-offset-x: 0px;
+  --shadow-offset-y: 8px;
+  --letter-spacing: 0em;
+  --spacing: 0.25rem;
+  --shadow-2xs: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.17);
+  --shadow-xs: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.17);
+  --shadow-sm: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.35), 0px 1px 2px 4.5px hsl(23.9958 9.6112% 9.9910% / 0.35);
+  --shadow: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.35), 0px 1px 2px 4.5px hsl(23.9958 9.6112% 9.9910% / 0.35);
+  --shadow-md: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.35), 0px 2px 4px 4.5px hsl(23.9958 9.6112% 9.9910% / 0.35);
+  --shadow-lg: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.35), 0px 4px 6px 4.5px hsl(23.9958 9.6112% 9.9910% / 0.35);
+  --shadow-xl: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.35), 0px 8px 10px 4.5px hsl(23.9958 9.6112% 9.9910% / 0.35);
+  --shadow-2xl: 0px 8px 50px 5.5px hsl(23.9958 9.6112% 9.9910% / 0.88);
 }
 
 @layer base {
@@ -120,5 +188,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    letter-spacing: var(--tracking-normal);
   }
 }
